# polymarket

./: Cargo.toml  README.md  polymarket_stage1_design.md
config/: default.toml
data/logs/: polymarket.log.2026-02-03
data/logs/2026-01-30/: events_snapshot.jsonl  health.jsonl
data/logs/2026-01-31/: health.jsonl
data/logs/2026-02-01/: events_snapshot.jsonl  health.jsonl  trades.jsonl
data/logs/2026-02-03/: events_snapshot.jsonl  health.jsonl  trades.jsonl
docs/: arbitrage_strategies.md
src/: config.rs  logger.rs  main.rs
src/events/: types.rs
src/services/: binance.rs  chainlink.rs  clob.rs  gamma.rs  mod.rs  polymarket.rs  price_scraper.rs  signal.rs  trade.rs
src/tui/: app.rs  log_buffer.rs  mod.rs
