[package]
name = "polymarket_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "native-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1"
thiserror = "1"
config = "0.14"
clap = { version = "4", features = ["derive"] }
url = "2"
rust_decimal = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
dotenvy = "0.15"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
scraper = "0.18"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
